Closed Bug 441191 Opened 17 years ago Closed 17 years ago

POP/RSS automatic filtering: delete message action is marking read, not deleting

Categories

(MailNews Core :: Filters, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.9.1a1

People

(Reporter: mcow, Assigned: rkent)

References

Details

(Keywords: regression)

Attachments

(1 file)

I have a Craig's List feed which I filter heavily to delete items I don't care about. This has been working fine, in 2.0 and the trunk (I was most recently using 3pre1-0419). Yesterday, I upgraded to 3pre2-0621. Now the filtered items are remaining in the inbox, but are marked as read. Annoying! The failing filters are all "Match any of" with at least six "Subject, Contains" criteria. It's unclear whether RSS Filter problems should be files under Thunderbird|RSS or Core|MailNews:Filters but the ones I've found are mostly filed under the former.
Still present, unsurprisingly, in 3pre2-0711. This bug is making it very difficult for me to keep using latter-day 3.x nightlies. If the release goes out with this in place, I'm going to have to find alternate solution somehow; a different RSS client, maybe. I don't want to do that! Steps to reproduce: 1) In an RSS account, create a filter: Subject, contain, redwood city :: Delete message 2) create a feed for: http://sfbay.craigslist.org/pen/muc/index.rss 3) when messages are done loading, check contents of feed folder Actual results: 3) Items with "redwood city" in the subject are all present, but marked read Expected results: 3) No items in the folder with "redwood city" in the subject. (Items should be in Trash folder.)
I'm more inclined to think that a regression in that (huge) range would have come from :Filters than :RSS. (I'm also more inclined to think that I would just use pipes.yahoo.com to cut the feed down to the parts I want before it even gets to me, but I won't tell you that until after you've already done a binary search through the builds between April and July to find the last build you can stand to use, and thus found when it regressed.)
Component: RSS → MailNews: Filters
Product: Thunderbird → Core
QA Contact: rss → filters
A better criterion for testing is "city" rather than "redwood city" -- that will also catch foster and daly cities. 0612: works 0614: fails btw, the fix that made unsubscribe/resubscribe finally work correctly helped enormously in this process. Thanks for the tip on Pipes.
Regression range - nothing stands out to me (though possibly bug 436051): <http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=ThunderbirdTinderbox&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2008-06-12&maxdate=2008-06-14+05%3A00%3A00&cvsroot=%2Fcvsroot> Can reproduce with the STR in comment 1, the filter log shows nothing. (linux/2008071103) Running the filter manually on the folder later does work however. And for an IMAP account, it works fine, but on a POP account it's the same problem.
OS: Windows 2000 → All
Hardware: PC → All
Summary: RSS filtering: delete message action is marking read, not deleting → POP/RSS automatic filtering: delete message action is marking read, not deleting
Worth a relnote?
Flags: blocking-thunderbird3+
Attached patch Added missing rvSplinter Review
GetTrashFolder was not returning the good rv, so the trash folder URI was not being set.
Assignee: nobody → kent
Status: NEW → ASSIGNED
Attachment #330271 - Flags: superreview?(bienvenu)
Attachment #330271 - Flags: review?(bienvenu)
Comment on attachment 330271 [details] [diff] [review] Added missing rv ah, thx, Kent.
Attachment #330271 - Flags: superreview?(bienvenu)
Attachment #330271 - Flags: superreview+
Attachment #330271 - Flags: review?(bienvenu)
Attachment #330271 - Flags: review+
Keywords: checkin-needed
Checking in mailnews/local/src/nsParseMailbox.cpp; /cvsroot/mozilla/mailnews/local/src/nsParseMailbox.cpp,v <-- nsParseMailbox.cpp new revision: 1.308; previous revision: 1.307 done
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Oops, my bad. Sorry about that.
Blocks: 436051
Target Milestone: --- → mozilla1.9.1a1
Verified fixed with 3pre2-0721, Win2K. Thanks very much, guys!
Status: RESOLVED → VERIFIED
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: