Bug 441191 POP/RSS automatic filtering: delete message action is marking read, not deleting. p=Kent James <kent@caspia.com>,r/sr=bienvenu